// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostList component render with variant is filled and type is password 1`] = `
<div>
  <div
    class="relative flex items-center px-4  py-3 gap-2.5 rounded-md text-sm bg-light-100 dark:bg-dark-200 text-light-500   "
  >
    <input
      class="w-full bg-transparent text-dark-300 focus:outline-0"
      id="test"
      name="test"
      placeholder="test"
      type="password"
      value="test"
    />
    <svg
      fill="none"
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.91 2a4.909 4.909 0 1 0-.001 9.818 4.909 4.909 0 0 0 0-9.818Z"
        stroke="#52525B"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
      <path
        d="M10.572 10.572 14 14"
        stroke="#52525B"
        stroke-linecap="round"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
    </svg>
  </div>
</div>
`;

exports[`PostList component render with variant is filled and type is text 1`] = `
<div>
  <div
    class="relative flex items-center px-4  py-3 gap-2.5 rounded-md text-sm bg-light-100 dark:bg-dark-200 text-light-500   "
  >
    <input
      class="w-full bg-transparent text-dark-300 focus:outline-0"
      id="test"
      name="test"
      placeholder="test"
      type="text"
      value="test"
    />
    <svg
      fill="none"
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.91 2a4.909 4.909 0 1 0-.001 9.818 4.909 4.909 0 0 0 0-9.818Z"
        stroke="#52525B"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
      <path
        d="M10.572 10.572 14 14"
        stroke="#52525B"
        stroke-linecap="round"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
    </svg>
  </div>
</div>
`;

exports[`PostList component render with variant is outlined and type is password 1`] = `
<div>
  <div
    class="relative flex items-center px-4  py-3 gap-2.5 rounded-md text-sm border border-solid border-light-700 text-dark-50 bg-white dark:bg-dark-200  "
  >
    <input
      class="w-full bg-transparent text-dark-300 focus:outline-0"
      id="test"
      name="test"
      placeholder="test"
      type="password"
      value="test"
    />
    <svg
      fill="none"
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.91 2a4.909 4.909 0 1 0-.001 9.818 4.909 4.909 0 0 0 0-9.818Z"
        stroke="#52525B"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
      <path
        d="M10.572 10.572 14 14"
        stroke="#52525B"
        stroke-linecap="round"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
    </svg>
  </div>
</div>
`;

exports[`PostList component render with variant is outlined and type is text 1`] = `
<div>
  <div
    class="relative flex items-center px-4  py-3 gap-2.5 rounded-md text-sm border border-solid border-light-700 text-dark-50 bg-white dark:bg-dark-200  "
  >
    <input
      class="w-full bg-transparent text-dark-300 focus:outline-0"
      id="test"
      name="test"
      placeholder="test"
      type="text"
      value="test"
    />
    <svg
      fill="none"
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.91 2a4.909 4.909 0 1 0-.001 9.818 4.909 4.909 0 0 0 0-9.818Z"
        stroke="#52525B"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
      <path
        d="M10.572 10.572 14 14"
        stroke="#52525B"
        stroke-linecap="round"
        stroke-miterlimit="10"
        stroke-width="1.5"
      />
    </svg>
  </div>
</div>
`;
